Index - Fixed spacing between blocks dynamic features and partners

--- a/css/components/dynamic-features.css
+++ b/css/components/dynamic-features.css
@@ -1,5 +1,5 @@
 .dynamic-feature {
-  margin-top: 120px;
+  margin: 120px 0;
 }
 .dynamic-feature__label {
   justify-content: space-between;
